# Centauri_Framework

./: CMakeLists.txt  LICENSE  README.md
centauri/: basicshapes.cpp  basicshapes.h  camera.cpp  camera.h  color.h  config.h  core.cpp  core.h  font.cpp  font.h  gameobject.cpp  gameobject.h  input.cpp  input.h  main.cpp  mesh.cpp  mesh.h  pointx.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h  shader.cpp  shader.h  singleton.h  sprite.cpp  sprite.h  text.cpp  text.h  textfile.cpp  textfile.h  texture.cpp  texture.h  transform.cpp  transform.h  vectorx.h
centauri/math/: time.cpp  time.h
centauri/shaders/: default_frag_shader.frag  default_frag_shader_grayscale.frag  temp_frag_shader.frag
centauri/shaders/framebuffer/: default_framebuffer_shader.frag
centauri/shaders/sprite/: default_frag_shader_basicshapes.frag  default_frag_shader_grayscale.frag  default_vert_shader.vert
centauri/shaders/text/: default_text_shader.vert
centauri/ui/: button.cpp  button.h  inputfield.cpp  inputfield.h
projects/demo/: Scene00.cpp  Scene00.h  main.cpp  masterscene.cpp  masterscene.h  scene01.cpp  scene01.h  scene02.cpp  scene02.h  scene03.cpp  scene03.h
projects/demo/assets/: container.tga
projects/demo_space_game/: enemyship.cpp  enemyship.h  gamescene.cpp  gamescene.h  laser.cpp  laser.h  main.cpp  playership.cpp  playership.h
projects/pinguin_warfare/: README.md  deathmenuscene.cpp  deathmenuscene.h  gamescene.cpp  gamescene.h  main.cpp  mainmenuscene.cpp  mainmenuscene.h  map.cpp  map.h  mapmaker.cpp  mapmaker.h  mapmakerselectionscene.cpp  mapmakerselectionscene.h  mapselectionmenuscene.cpp  mapselectionmenuscene.h  menuscene.cpp  menuscene.h  pausemenu.cpp  pausemenu.h  pinguin.cpp  pinguin.h  player.cpp  player.h  snowball.cpp  snowball.h  tile.cpp  tile.h  winmenuscene.cpp  winmenuscene.h
projects/pinguin_warfare/maps/: map_one.m  map_two.m  test.m
